# eit-image-enhancement

./: .gitignore  README.md  pyproject.toml
configs/experiments/: exp000_singleframe_unet.yaml  exp001_baseline_unet.yaml  exp002_neck_cbam_unet.yaml  exp003_early_cbam_unet.yaml  exp004_neck_tam_unet.yaml  exp005_early_tam_unet.yaml  exp006_neck_sam_unet.yaml  exp007_early_sam_unet.yaml  exp101_dual_source_seq_unet.yaml  exp102_recon_seq_unet.yaml  exp103_dual_source_temporal_film_unet.yaml  exp104_dual_source_seq_unet_normfix.yaml  exp105_dual_source_seq_unet_lung_contour_roi.yaml  exp107_structeit_baseline_unet_smoke.yaml  exp107_structeit_baseline_unet_v1.yaml  exp108_structeit_cached_unet_v1.yaml  exp109_structeit_cached_unet_w5.yaml
docs/: dual_source_20frame_training_spec.md  dual_source_dataflow_architecture.md  project_structure.md
scripts/: infer.py  train.py  verify_hypothesis.py
scripts/analysis/: bayesian_quantile_search.py  breathing_rawData_curve_plt.py  check_normalization_experiment.py  find_cycle_period.py  gray_value_distribution.py  mesh_quantile_normalization_eval.py  touch_curve.py  viz_part_curve.py
scripts/data/: backfill_lctsc_lung_contour_mask.py  build_ct_middle_slice.py  build_structeit_cache.py  convert_sim_data.py  convert_sim_data_252176.py  grey2npy_npz.py  grey2npz_npy_int.py  mat2npz.py  npz_norm.py  rewrite_lctsc_manifest_paths.py
scripts/mesh/: build_fem_from_mask.py
scripts/segmentation/: run_medsam_ct_slice.py
scripts/simulation/: build_respiratory_cycle_dataset.py
scripts/viz/: check_blur_effect.py  check_data.py  (+8 more)
(+32 files in other folders)
